--- a/messenger/src/main/resources/application.yaml
+++ b/messenger/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://keycloak:8080/realms/social-network
+          issuer-uri: http://localhost:8080/realms/social-network
   flyway:
     enabled: true
     schemas:
